--- a/WindowsFormsAppDemo/App.config
+++ b/WindowsFormsAppDemo/App.config
@@ -61,6 +61,10 @@
         <assemblyIdentity name="System.Text.Encoding.CodePages" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-6.0.0.0" newVersion="6.0.0.0" />
       </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Microsoft.CodeAnalysis.AnalyzerUtilities" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-3.3.5.2003" newVersion="3.3.5.2003" />
+      </dependentAssembly>
     </assemblyBinding>
   </runtime>
 </configuration>
